crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__type_error_with_identifier.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/type_error_with_identifier.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `+`: lhs has type `Nil`, but rhs has type `Number`
   ╭─[crabbing-interpreters/tests/cases/type_error_with_identifier.lox:2:1]
   │
 2 │ variable_name + 42;
   │ ──────┬────── ┬ ─┬  
   │       │       │  ╰── this is of type `Number`
   │       │       │     
   │       │       ╰───── the operator in question
   │       │             
   │       ╰───────────── this is of type `Nil`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
